--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
 <body>
     <div id="app">
+        <h1>{{message}}</h1>
     </div>
     <script type="text/javascript" src="js/script.js"></script>
 </body>
